test/good/nullables/op01.px

x: Int?
x = 10
x': Int = x!
print x'
