test/bad/nullables/nullable01.px

x: Int? = 5
x': Int = x
